refactor(sync/uapi): 拆分 os crate 为 workspace，提取 uapi 和 sync crate

--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+uapi = { path = "../crates/uapi" }
+sync = { path = "../crates/sync" }
 talc = { version = "4" }
 lock_api = "0.4"
 bitflags = { version = "2.10.0" }
