--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 uapi = { path = "../crates/uapi" }
 sync = { path = "../crates/sync" }
+klog = { path = "../crates/klog" }
 talc = { version = "4" }
 lock_api = "0.4"
 bitflags = { version = "2.10.0" }
