--- a/crates/klog/Cargo.toml
+++ b/crates/klog/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "klog"
-version.workspace = true
-edition.workspace = true
+version = "0.1.0"
+edition = "2024"
 description = "Kernel logging subsystem for SanktaOS"
 
 [dependencies]
