--- a/crates/sync/Cargo.toml
+++ b/crates/sync/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sync"
-version.workspace = true
-edition.workspace = true
+version = "0.1.0"
+edition = "2024"
 
 [dependencies]
 lock_api = "0.4"
