refactor(mm): 拆分 mm 子系统为独立 crate，消除 module_inception

--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+mm = { path = "../crates/mm" }
 uapi = { path = "../crates/uapi" }
 sync = { path = "../crates/sync" }
 klog = { path = "../crates/klog" }
