--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -8,6 +8,7 @@ mm = { path = "../crates/mm" }
 uapi = { path = "../crates/uapi" }
 sync = { path = "../crates/sync" }
 klog = { path = "../crates/klog" }
+vfs = { path = "../crates/vfs" }
 talc = { version = "4" }
 lock_api = "0.4"
 bitflags = { version = "2.10.0" }
