--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -9,6 +9,7 @@ uapi = { path = "../crates/uapi" }
 sync = { path = "../crates/sync" }
 klog = { path = "../crates/klog" }
 vfs = { path = "../crates/vfs" }
+device = { path = "../crates/device" }
 talc = { version = "4" }
 lock_api = "0.4"
 bitflags = { version = "2.10.0" }
