--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -11,6 +11,7 @@ klog = { path = "../crates/klog" }
 vfs = { path = "../crates/vfs" }
 device = { path = "../crates/device" }
 fs = { path = "../crates/fs" }
+net = { path = "../crates/net" }
 talc = { version = "4" }
 lock_api = "0.4"
 bitflags = { version = "2.10.0" }
@@ -24,7 +25,6 @@ paste = "1.0"
 ext4_rs = "1.3.2"
 virtio-drivers = "0.12.0"
 fdt = "0.1.5"
-smoltcp = { version = "0.12.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-raw", "socket-tcp", "socket-udp"] }
 chrono = { version = "0.4", default-features = false, features = ["alloc"] }
 uart_16550 = "0.4.0"
 hashbrown = "0.16.1"
