--- a/crates/klog/Cargo.toml
+++ b/crates/klog/Cargo.toml
@@ -2,6 +2,9 @@
 name = "klog"
 version = "0.1.0"
 edition = "2024"
+authors = ["SanktaOS Contributors"]
+license = "GPL-3.0-or-later"
+repository = "https://github.com/ZIYAN137/SanktaOS"
 description = "Kernel logging subsystem for SanktaOS"
 
 [dependencies]
