--- a/crates/mm/Cargo.toml
+++ b/crates/mm/Cargo.toml
@@ -2,6 +2,10 @@
 name = "mm"
 version = "0.1.0"
 edition = "2024"
+authors = ["SanktaOS Contributors"]
+license = "GPL-3.0-or-later"
+repository = "https://github.com/ZIYAN137/SanktaOS"
+description = "Memory management subsystem for SanktaOS"
 
 [dependencies]
 sync = { path = "../sync" }
