--- a/crates/net/Cargo.toml
+++ b/crates/net/Cargo.toml
@@ -2,6 +2,10 @@
 name = "net"
 version = "0.1.0"
 edition = "2024"
+authors = ["SanktaOS Contributors"]
+license = "GPL-3.0-or-later"
+repository = "https://github.com/ZIYAN137/SanktaOS"
+description = "Network stack for SanktaOS"
 
 [dependencies]
 vfs = { path = "../vfs" }
