--- a/crates/sync/Cargo.toml
+++ b/crates/sync/Cargo.toml
@@ -2,6 +2,10 @@
 name = "sync"
 version = "0.1.0"
 edition = "2024"
+authors = ["SanktaOS Contributors"]
+license = "GPL-3.0-or-later"
+repository = "https://github.com/ZIYAN137/SanktaOS"
+description = "Synchronization primitives for SanktaOS"
 
 [dependencies]
 lock_api = "0.4"
