--- a/crates/uapi/Cargo.toml
+++ b/crates/uapi/Cargo.toml
@@ -2,6 +2,10 @@
 name = "uapi"
 version = "0.1.0"
 edition = "2024"
+authors = ["SanktaOS Contributors"]
+license = "GPL-3.0-or-later"
+repository = "https://github.com/ZIYAN137/SanktaOS"
+description = "User-space API definitions for SanktaOS"
 
 [dependencies]
 bitflags = "2.10.0"
