--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -2,6 +2,12 @@
 name = "os"
 version = "0.1.0"
 edition = "2024"
+authors = ["SanktaOS Contributors"]
+license = "GPL-3.0-or-later"
+repository = "https://github.com/ZIYAN137/SanktaOS"
+description = "SanktaOS kernel - A refactored and optimized OS kernel based on Comix"
+keywords = ["os", "kernel", "riscv", "loongarch", "rust"]
+categories = ["no-std", "embedded"]
 
 [dependencies]
 mm = { path = "../crates/mm" }
