--- a/crates/sync/Cargo.toml
+++ b/crates/sync/Cargo.toml
@@ -10,6 +10,9 @@ description = "Synchronization primitives for SanktaOS"
 [dependencies]
 lock_api = "0.4"
 
+[dev-dependencies]
+test-support = { path = "../../test-support" }
+
 # sync 暂时放宽文档要求
 [lints.rust]
 missing_docs = "warn"
