--- a/docs/book.toml
+++ b/docs/book.toml
@@ -2,8 +2,8 @@
 authors = ["SanktaOS Contributors"]
 language = "zh-CN"
 multilingual = false
-src = "docs"
-title = "SanktaOS 内核文档"
+src = "."
+title = "SanktaOS 设计文档"
 description = "SanktaOS 是基于 Comix 重构的 Rust 操作系统内核，支持 RISC-V 和 LoongArch 架构"
 
 [output.html]
