--- a/crates/mm/Cargo.toml
+++ b/crates/mm/Cargo.toml
@@ -15,6 +15,9 @@ talc = "4"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 log = "0.4"
 
+[dev-dependencies]
+test-support = { path = "../../test-support" }
+
 [lints.rust]
 missing_docs = "warn"
 
