feat: 为操作系统大赛创建独立路径

--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -63,3 +63,7 @@ opt-level = 1  # 启用基本优化以减小代码体积
 
 [profile.test]
 opt-level = 1  # 测试模式也启用基本优化
+
+[features]
+# Enable OS competition flow (skip BusyBox init).
+oscomp = []
