feat: 添加 GitLab 镜像工作流，包含 Rust 依赖预打包和 README 替换，并更新构建配置以支持预打包依赖。

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ testsuits-for-oskernel/
 # Logs
 os/loongarch.log
 
+# Cargo vendor (generated for GitLab mirror / offline judge builds)
+os/vendor/
+os/cargo-vendor-config.toml
+
 # Local notes
 os/可能的改进.md
 
