--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,7 @@ jobs:
             autoconf automake autotools-dev curl libmpc-dev libmpfr-dev libgmp-dev \
             gawk build-essential bison flex texinfo gperf libtool patchutils bc \
             zlib1g-dev libexpat1-dev pkg-config libglib2.0-dev libpixman-1-dev libsdl2-dev libslirp-dev \
-            python3 python3-pip ninja-build
+            python3 python3-pip ninja-build e2fsprogs
 
       - name: 📥 Cache QEMU Build and Installation
         uses: actions/cache@v4
